# addcommitpush.io

./: .env.example  .gitignore  .prettierignore  .vercelignore  404.html  AGENTS.md  CLAUDE.md  CNAME  DEEP_RESEARCH.md  LIFE_UI_PLAN.md  Makefile  README.md  TONE_OF_VOICE.md  config.yml  demohunter.config.ts  docker-compose.yaml  eslint.config.mjs  feedback.md  index.html  index.json  index.xml  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  robots.txt  sitemap.xml  tsconfig.json  vercel.json  vitest.config.ts
.demohunter/: .gitignore
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.playwright-cli/: page-2026-07-15T20-14-55-484Z.yml  page-2026-07-15T20-15-15-598Z.yml  page-2026-07-15T20-22-47-136Z.yml  (+1 more)
deep-research-agent/: .gitignore  README.md  pyproject.toml
deep-research-agent/examples/: combined_workflow.py
deep-research-agent/scripts/: generate_sample_data.py
deep-research-agent/src/deep_research/: cli.py  models.py
deep-research-agent/src/deep_research/agent/: data_agent.py  iterative_eda.py  orchestrator.py  prompts.py  react.py  state.py  worker.py
deep-research-agent/src/deep_research/llm/: client.py
deep-research-agent/src/deep_research/notebook/: __init__.py  builder.py  executor.py
deep-research-agent/src/deep_research/obsidian/: __init__.py  insights.py  loader.py  templates.py  writer.py
deep-research-agent/src/deep_research/repl/: __init__.py  commands.py  completer.py  context.py  cost_estimation.py  parser.py  session_manager.py  shell.py  state_persistence.py
deep-research-agent/src/deep_research/tools/: base.py  data_loader.py  eda_tool.py  executor.py  fetch.py  search.py
deep-research-agent/src/deep_research/utils/: live_progress.py  logger.py  pricing.py  progress.py  store.py  tokens.py  verbose.py
deep-research-agent/tests/: test_agent.py  test_cli_commands.py  test_data_loader.py  test_eda_tool.py  test_executor.py  test_integrated_workflows.py  test_notebook.py  test_parallel_eda.py  test_pricing.py  test_repl_context.py  test_repl_parser.py  test_repl_session_manager.py  test_repl_state.py  test_session_loader.py  test_tools.py
dr/: .env.example  Cargo.toml  README.md
dr/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  report.rs  types.rs
dr/src/clients/: brave.rs  fetch.rs  mod.rs  openrouter.rs
dr/src/strategy/: mod.rs  source_mesh.rs
dr/tests/: http_clients.rs  source_mesh.rs
life/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
life/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  EVALUATION.md  PROVISIONING.md  REALTIME_VOICE.md  REQUIREMENTS.md  ROADMAP.md  THREAT_MODEL.md
life/migrations/: 0001_initial.sql  0002_operational_constraints.sql  0003_connector_job_idempotency.sql
life/src/: agent.rs  api.rs  config.rs  connectors.rs  crypto.rs  db.rs  error.rs  lib.rs  models.rs  openai.rs  research.rs  shutdown.rs
life/tests/: postgres_integration.rs
presentations/deep-research/demos/: .env.example  .gitignore  Makefile  README.md  diffusion_agent.py  log.py  main.py  pyproject.toml  react_agent.py  storm_agent.py  test_agents.py
presentations/voice-agents/: CLAUDE.md  KOKORO-DEEP-DIVE.md  MOONSHINE-DEEP-DIVE.md  SLIDES.md  STT-DEEP-DIVE.md  TRANSPORT-DEEP-DIVE.md  TTS-DEEP-DIVE.md  VAD-DEEP-DIVE.md  WHISPER-DEEP-DIVE.md  pyproject.toml
presentations/voice-agents/examples/: 01-whisper-basic.py  02-vad-streaming.py  03-kokoro-tts.py  04-groq-streaming.py  05-full-pipeline.py
presentations/voice-agents/jarvis/: .env.example  Makefile  README.md  __init__.py  __main__.py  agent.py  audio.py  config.py  models.py  pipeline.py  pyproject.toml  server.py  slide-content.json  stt.py  test_gpu.py  webrtc.py
presentations/voice-agents/jarvis/e2e/: jarvis-connect.spec.ts  jarvis-ws.spec.ts  playwright.config.ts
presentations/voice-agents/jarvis/tests/: test_streaming.py  test_stt.py  test_webrtc.py
presentations/voice-agents/research/: AGENTS.md  RESEARCH_STATUS.md  graph.json  references.md  summary.md
presentations/voice-agents/research/articles/: deepgram-flux-configuration.html  deepgram-flux-launch.html  deepgram-flux-quickstart.html  human-turn-taking-stivers.html  itu-g114.html  kokoro-82m-model-card.html  livekit-eot-improvement-post.html  livekit-transport.html  livekit-turn-detection-post.html  livekit-turns.html  livekit-vad-turn-detection-config.html  mdn-webrtc-protocols.html  nvidia-canary-qwen-25b.html  nvidia-parakeet-tdt-06b-v3.html  open-asr-leaderboard-github.html  openai-realtime-webrtc.html  openai-realtime-websocket.html  pipecat-choosing-transport.html  pipecat-smart-turn.html  pipecat-transports.html  qwen3-asr-17b.html  silero-vad-quality-metrics.html
presentations/voice-agents/research/data/: native_speech_models.csv  stt_models.csv  transport_tradeoffs.csv  tts_models.csv  turn_detection.csv
presentations/voice-agents/research/drafts/: endpointing-is-turn-taking.md  streaming-stt-is-not-batch-stt.md  tts-latency-is-architecture.md  voice-agent-latency-budget-is-product.md
presentations/voice-agents/research/insights/: INSIGHT_01_latency_budget_is_the_product.md  INSIGHT_02_endpointing_is_turn_taking.md  INSIGHT_03_streaming_stt_is_not_batch_stt.md  INSIGHT_04_tts_latency_is_architecture.md  INSIGHT_05_transport_is_media_correctness.md  INSIGHT_06_barge_in_is_the_real_system_test.md  INSIGHT_07_native_speech_models_change_the_boundary.md  INSIGHT_08_voice_agent_eval_needs_multiple_metrics.md  README.md
presentations/voice-agents/research/paper-text/: f5-tts-2410.06885.txt  fish-audio-s2-2603.08823.txt  glm-4-voice-2412.02612.txt  mini-omni-2408.16725.txt  moonshine-2410.15608.txt  moonshine-v2-2602.12241.txt  moshi-2410.00037.txt  open-asr-leaderboard-2510.06961.txt  qwen25-omni-2503.20215.txt  spark-tts-2503.01710.txt  styletts2-2306.07691.txt  whisper-2212.04356.txt
(+1080 files in other folders)
