[package]
name = "dr"
version = "0.1.0"
edition = "2024"
description = "Agent-oriented deep research CLI backed by Brave Search and OpenRouter."
license = "UNLICENSED"

[[bin]]
name = "dr"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.48", features = ["fs", "macros", "rt-multi-thread", "time"] }
url = "2.5"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
unused = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = 10 }
