[package]
name = "life-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Personal life knowledge agent backed exclusively by PostgreSQL"
license = "UNLICENSED"
publish = false

[lib]
name = "life_agent"
path = "src/lib.rs"

[[bin]]
name = "life-api"
path = "src/bin/api.rs"

[[bin]]
name = "life-worker"
path = "src/bin/worker.rs"

[dependencies]
aes-gcm = "0.11.0"
anyhow = "1.0.100"
axum = { version = "0.8.9", features = ["macros", "multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.13.4", default-features = false, features = ["form", "json", "multipart", "query", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.9.0", default-features = false, features = ["chrono", "derive", "json", "macros", "migrate", "postgres", "runtime-tokio", "tls-rustls-ring-native-roots", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower = "0.5.2"
tower-http = { version = "0.7.0", features = ["cors", "request-id", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
pretty_assertions = "1.4.1"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"
unsafe-code = "forbid"

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant-clone = "deny"
