[project]
name = "jarvis"
version = "0.1.0"
description = "Jarvis AI co-presenter — local voice agent backend"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "faster-whisper>=1.0.0",
    "kokoro>=0.9.4",
    "silero-vad>=5.1",
    "groq>=0.11.0",
    "openai>=1.30.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "moonshine-voice>=0.0.49",
    "python-dotenv>=1.0.0",
    "aiortc>=1.9.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
