[project]
name = "jarvis"
version = "0.1.0"
description = "Jarvis AI co-presenter — local voice agent backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "faster-whisper>=1.0.0",
    "kokoro-onnx>=0.4.0",
    "silero-vad>=5.1",
    "groq>=0.11.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
]

[project.scripts]
jarvis = "jarvis.server:main"
